--- a/index.html
+++ b/index.html
@@ -241,8 +241,7 @@ relationship &lt;type&gt; {
 		<button class="btn" onclick="app.dismissDialog()">Dismiss</button>
 	</div>
 
-	<script type="text/vnd.jdl.class" id="defaultGraph">
-entity Department {
+	<script type="text/vnd.jdl.class" id="defaultGraph">entity Department {
   Long departmentId
   String departmentName required
 }
@@ -279,9 +278,11 @@ entity Employee {
   Long salary
   Long commissionPct
 }
+
 service SampleManager {
   Task assign(Employee employee, Task task)
 }
+
 	</script>
 	<script>
 		(function (i, s, o, g, r, a, m) {
@@ -302,12 +303,11 @@ service SampleManager {
 		ga('jdlTracker.send', 'pageview');
 
 	</script>
-  <script src="bower_components/requirejs/require.js">
 	<script src="lib/zepto.min.js"></script>
 	<script src="lib/lodash.min.js"></script>
 	<script src="lib/dagre.min.js"></script>
 	<script src="lib/jquery.magnific-popup.min.js"></script>
-	<script src="js/vagParser.js"></script>
+	<script src="dist/lib.bundle.js"></script>
 	<script src="codemirror/codemirror-compressed.js"></script>
 	<script src="codemirror/show-hint.js"></script>
 	<script src="codemirror/jdl-hint.js"></script>
@@ -322,6 +322,6 @@ service SampleManager {
 	<script src="nomnoml/nomnoml.layouter.js"></script>
 	<script src="nomnoml/nomnoml.renderer.js"></script>
 	<script src="nomnoml/nomnoml.js"></script>
-	<script src="js/app.js"></script>
+	<script src="dist/main.bundle.js"></script>
 </body>
 </html>
