--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <link rel="stylesheet" href="lib/magnific-popup.css">
 <link rel="stylesheet" href="codemirror/codemirror.css">
 <link rel="stylesheet" href="codemirror/show-hint.css">
-<link rel="stylesheet" href="codemirror/solarized.jdl.css">
+<link rel="stylesheet" href="codemirror/solarized.vag.css">
 <link rel="stylesheet" href="css/app.css">
 <link rel="shortcut icon" href="favicon.ico">
 </head>
@@ -241,7 +241,8 @@ relationship &lt;type&gt; {
 		<button class="btn" onclick="app.dismissDialog()">Dismiss</button>
 	</div>
 
-	<script type="text/vnd.vag.class" id="defaultGraph">entity Department {
+	<script type="text/vnd.vag.class" id="defaultGraph">@paginate(pagination)
+entity Department {
   Long departmentId
   String departmentName required
 }
@@ -277,6 +278,37 @@ entity Employee {
   ZonedDateTime hireDate,
   Long salary
   Long commissionPct
+}
+
+relationship OneToOne {
+  JobHistory{department} to Department
+}
+
+relationship OneToOne {
+  JobHistory{job} to Job
+}
+
+relationship OneToOne {
+  JobHistory{employee} to Employee
+}
+
+relationship OneToMany {
+  /**
+   * A relationship
+   */
+  Department{employee} to
+  /**
+   * Another side of the same relationship
+   */
+  Employee
+}
+
+relationship ManyToOne {
+  Employee{manager} to Employee
+}
+
+relationship OneToMany {
+  Employee{job} to Job
 }
 
 service SampleManager {
