nomnoml gulp compilation

--- a/index.html
+++ b/index.html
@@ -350,10 +350,13 @@ service SampleManager {
 	<script src="nomnoml/skanaar.canvas.js"></script>
 	<script src="nomnoml/skanaar.util.js"></script>
 	<script src="nomnoml/skanaar.vector.js"></script>
+  <!--
 	<script src="nomnoml/nomnoml.parser.js"></script>
 	<script src="nomnoml/nomnoml.layouter.js"></script>
 	<script src="nomnoml/nomnoml.renderer.js"></script>
 	<script src="nomnoml/nomnoml.js"></script>
+   -->
+  <script src="dist/nomnoml.js"></script>
 	<script src="dist/main.bundle.js"></script>
 </body>
 </html>
